--- a/bmicalc.html
+++ b/bmicalc.html
@@ -181,7 +181,7 @@
   </script>
   <body>
     <div class="outer">
-      <img src="images/bmi.png" alt="image-bmi" />
+      <img src="bmi.png" alt="image-bmi" />
       <h1>BMI Calculator</h1>
       <br />
       <span class="text">Cm / Kg</span>
@@ -196,11 +196,11 @@
       </label>
       <span class="text">Inches / lbs</span>
       <br />
-      <img src="images/height.png" alt="image-height" />
+      <img src="height.png" alt="image-height" />
       <p class="text">Height</p>
       <br />
       <input type="number" id="h" placeholder="" min="0" /><br />
-      <img src="images/weight.png" alt="" />
+      <img src="weight.png" alt="" />
       <p class="text">Weight</p>
       <br />
       <input type="number" id="w" class="radio" placeholder="" min="0" />
